# video-master

./: .gitignore  AGENTS.md  AI-CONTEXT.md  ALGORITHM.md  CR.md  GEMINI.md  GUIDE.md  README.md  app.go  app_test.go  go.mod  main.go  required.md  wails.json
contracts/: native-api.yaml
database/: database.go
docs/: CODE_REVIEW_2026-02-13.md  CODE_REVIEW_2026-02-24.md  design-subtitle.md  req-subtitle-plan.md  required.md
frontend/: index.html  package-lock.json  package.json  package.json.md5  vite.config.js
models/: schema.go  video.go  video_embedding.go
rust/: Cargo.toml
rust/crates/cine-api/: Cargo.toml
rust/crates/cine-api/src/: lib.rs
rust/crates/cine-api/tests/: video_contracts.rs
rust/crates/cine-daemon/: Cargo.toml
rust/crates/cine-daemon/src/: lib.rs  main.rs
rust/crates/cine-daemon/tests/: health_auth.rs  video_routes.rs
rust/crates/cine-db/: Cargo.toml
rust/crates/cine-db/src/: lib.rs
rust/crates/cine-db/tests/: config_and_schema.rs  library_management.rs  native_remaining_slices.rs  video_file_operations.rs  video_playback_preview.rs  video_queries.rs
rust/crates/cine-domain/: Cargo.toml
rust/crates/cine-domain/src/: lib.rs
rust/crates/cine-domain/tests/: video_query.rs
scripts/: package_native_dev.sh  verify_native_foundation.sh  verify_native_packaging.sh  verify_native_settings_ui.sh  verify_native_video_core.sh  verify_no_legacy_desktop_stack.sh
services/: ai_backend.go  ai_tagging_client.go  ai_tagging_config.go  ai_tagging_service.go  ai_tagging_service_test.go  directory_service.go  embedding_client.go  errors.go  local_ml_runtime.go  local_ml_worker.py  settings_service.go  short_feed_server.go  short_feed_service_test.go  subtitle_contracts.go  subtitle_queue.go  subtitle_queue_test.go  subtitle_search_service.go  subtitle_search_service_test.go  subtitle_service.go  subtitle_service_contract_test.go  subtitle_translation.go  subtitle_translation_test.go  (+6 more)
(+37 files in other folders)
