[package]
name = "cine-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
cine-api = { path = "../cine-api" }
cine-db = { path = "../cine-db" }
cine-domain = { path = "../cine-domain" }
http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
filetime = "0.2"
reqwest.workspace = true
tempfile = "3.23"
tokio.workspace = true
tower.workspace = true
